examples/test_package/Double_dc_only_report_tool/steps/benchcalcu_partial_run4/#test_results_result.txt
Error evaluating Problog model:
    toks = self.label_tokens(string, root_tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1206, in label_tokens
    raise ParseError(string, "Ambiguous token role", t.location)
problog.parser.ParseError: Ambiguous token role at 33:1.